# dzemer

./: CMakeLists.txt  Control.hpp  arguments.hpp  dzemer.cpp  util.hpp
engine/: engine.cpp  engine.hpp  score.hpp  score_player.cpp  score_player.hpp  score_recorder.cpp  score_recorder.hpp
gui/: lv2_plugin_browser.cpp  lv2_plugin_browser.hpp  main_window.cpp  main_window.hpp
lv2-util/: Atom.hpp  Feature.hpp  Midi.hpp  Node.hpp  Plugin.cpp  Plugin.hpp  UriMap.hpp  World.hpp
test/: CMakeLists.txt  atom.cpp  test.cpp  test.hpp
